@@ -1,11 +1,11 @@
-+\"
-+\" lz4.1: This is a manual page for 'lz4' program. This file is part of the
-+\" lz4 <https://code.google.com/p/lz4/> project.
-+\"
-+
-+\" No hyphenation
-+.hy 0
-+.nr HY 0
+\"
+\" lz4.1: This is a manual page for 'lz4' program. This file is part of the
+\" lz4 <https://code.google.com/p/lz4/> project.
+\"
+
+\" No hyphenation
+.hy 0
+.nr HY 0
 
 .TH lz4 man
 .SH NAME
